--- a/sofyruizportafolio/package.json
+++ b/sofyruizportafolio/package.json
@@ -2,15 +2,19 @@
   "name": "sofyruizportafolio",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "homepage": "https://sofiaruizhinojosa27.github.io/sofyruizportafolio/.",
   "dependencies": {
+    "axios": "^0.19.0",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.0.1",
-    "react-scroll": "^1.7.12"
+    "react-scroll": "^1.7.12",
+    "reactstrap": "^8.0.1",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,11 +44,12 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/sofiaruizhinojosa27/sofyruizportafolio.git"
+    "url": "git+https://github.com/sofiaruizhinojosa27/sofyruizportafolio.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sofiaruizhinojosa27/sofyruizportafolio/issues"
-  }
+  },
+  "keywords": []
 }
